k8s/api/dependency-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway
  namespace: opsight
  labels:
    app: payment-gateway
spec:
  selector:
    app: payment-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
